k8s/overlays/vx-home/apps/omni-tools/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-tools
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - tools.vx.home
    secretName: omni-tools-tls
  rules:
  - host: tools.vx.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omni-tools
            port:
              number: 80
